fix(styles): remove negative navbar margins so logo and shop name are visible

--- a/styles.css
+++ b/styles.css
@@ -480,7 +480,7 @@ h4 {
     color: #ffffff !important;
     transition: all 0.28s ease;
     margin-right: auto;
-    margin-left: -3cm;
+    margin-left: 0;
 }
 
 .navbar-brand:hover {
@@ -510,7 +510,7 @@ h4 {
 }
 
 .navbar-nav.ms-auto {
-    margin-right: -3cm !important;
+    margin-right: 0 !important;
     margin-left: auto;
 }
 
